<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <ImageView
                android:id="@+id/book_image"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/book" />

            <TextView
                android:id="@+id/book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/book_image"
                android:text="@string/name_of_book"
                android:layout_marginTop="25dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/book_image"
                android:layout_below="@+id/book_name"
                android:text="@string/year"
                android:layout_marginTop="5dp"
                android:textSize="14sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>